Fixed the issue of the links going between lines by adding a white-space: nowrap to the button class

--- a/style.css
+++ b/style.css
@@ -209,6 +209,7 @@ a.photo:hover {
 .buttons {
   text-align:center;
   margin-top: 10px;
+  line-height: 50px;
 }
 
 .button {
@@ -222,6 +223,7 @@ a.photo:hover {
   margin-left: 3px;
   margin-right: 3px;
   box-shadow: 2px 0px 2px 1px rgba(36, 36, 36, 0.1);
+  white-space: nowrap;
 }
 
 a.button:link {
